--- a/twitter.html
+++ b/twitter.html
@@ -31,7 +31,7 @@
             <span> @thinslices </span>
           </div>
         </div>
-          <button type="button">Follow</button>
+          <button type="button">Follow!</button>
         </li>
         <li>
         <div class="image-text">
