--- a/twitter.html
+++ b/twitter.html
@@ -45,7 +45,7 @@
         </li>
       </ul>
     
-      <button type="button">Show more</button>
+      <button type="button">Show more login</button>
     </section>
   </body>
 </html>
